quacker-frontend/k8s/staging/quacker-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quacker-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - staging.quacker.nl
      secretName: testsecret-tls
  rules:
    - host: 'staging.quacker.nl'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: quacker-frontend
                port:
                  number: 80
